add description how jlink was used and files compiled, packaged